--- a/CatchMe/Views/Tasks/_EditCommentModal.cshtml
+++ b/CatchMe/Views/Tasks/_EditCommentModal.cshtml
@@ -5,14 +5,26 @@
 }
 
 
-            @using (Html.BeginForm("EditComment", "Tasks", FormMethod.Post))
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">
+                Edit Comment
+                <br /><small class="text-muted"><strong>@Model.title</strong></small>
+            </h4>
+
+        </div>
+        @using (Html.BeginForm("EditComment", "Tasks", FormMethod.Post))
             {
-        <div class="modal-body">
+            <div class="modal-body">
+
+                @Html.Raw(Model.description)
 
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-                    
+
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.comment_id)
                     @Html.HiddenFor(model => model.task_id)
@@ -37,17 +49,21 @@
                             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-default" />
-                            <input type="button" value="Close" data-commentid="@Model.comment_id" class="btn btn-default closeeditcomment" />
-                        </div>
-                    </div>
+                    @*<div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Save" class="btn btn-default" />
+                            </div>
+                        </div>*@
                 </div>
-                    <a href="@Url.Action("DeleteComment","Tasks", new { id=Model.comment_id, taskid=Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash-o"></span>&nbsp; Delete </a>
-        </div>
-      
-            }
-    
+                <a href="@Url.Action("DeleteComment","Tasks", new { id=Model.comment_id, taskid=Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash-o"></span>&nbsp; Delete </a>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
 
-            
+            </div>
+        }
+    </div>
+</div>
+
+
