--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -15,7 +15,7 @@
 }
 
 <input id="original_status" type="hidden" value="@Model.status" />
-<button id="test">test</button>
+@*<button id="test">test</button>*@
 <br />
 <div class="row">
     <div class="col-md-8">
@@ -323,13 +323,12 @@
                 @*@Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-4" })*@
                 <div class="col-md-4">
                     <label for="status" class="control-label">Status <span style="color:#31B0D5;font-size:1.2em" class="fa fa-save" data-toggle="tooltip" data-placement="top" title="Auto Saves when value changes"></span></label>
-
                 </div>
 
                 <div class="col-md-8">
 
-                    @*@Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control chosen-select submitme" })*@
-                    @Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control chosen-select statuschange" , @id="reset_statusid"})
+                    @Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control chosen-select submitme" })
+                    @*@Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control chosen-select statuschange" , @id="reset_statusid"})*@
                     @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
                     <span class="text-light"><small>&nbsp;<span class="fa fa-info-circle"></span> Only <b>Owner</b> can close task</small></span>
                 </div>
@@ -719,6 +718,8 @@
 
                         $('#test').click(function () {
                             $('.statuschange').val('0');
+                            alert('status reset');
+                            $(".chosen-select").chosen().change();
                         })
 
                         $('body').on('click', '.uploadAttachementForComment', function() {                         
@@ -732,7 +733,7 @@
 
                             alert(orig_status);
                             $('.statuschange').val("'"+orig_status+"'");
-
+                            $(".chosen-select").chosen().change();
                         });
 
 
