--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -26,9 +26,16 @@
                 <ul class="nav navbar-nav">
                     
                     <li><a href="@Url.Action("Index","Tasks")" title="Home"><span class="fa fa-15x fa-home"></span> </a></li>
-                    <li><a href="@Url.Action("CreateTask","Tasks")" title="create task"><span class="fa fa-15x fa-plus"></span> </a></li>
+                    @if (!session.Current.IsBusiness)
+                    {
+                        <li><a href="@Url.Action("CreateTask","Tasks")" title="create task"><span class="fa fa-15x fa-plus"></span> </a></li>
+    <li><a href="@Url.Action("Index","Stats")" title="Stats"><span class="fa fa-15x fa-line-chart"></span> </a></li>
+                    }
+                    
                    
-                    <li><a href="@Url.Action("Index","Stats")" title="Stats"><span class="fa fa-15x fa-line-chart"></span> </a></li>
+                    
+
+
                     <li class="opensearch"><a href="#"><span class="fa fa-15x fa-search-plus"></span></a></li>
                     <li class="showadvancedsearch" style="display:none">                         
                         
